--- a/css/index.css
+++ b/css/index.css
@@ -175,9 +175,9 @@ footer {
 }
 
 .login-form {
-    width: 400px;
+    width: 1000px;
     line-height: 1.5;
-    margin: 150px auto 0;
+    margin: 150px auto 150px;
     font-family: 'Roboto', sans-serif;
     min-height: 475px;
 }
