--- a/css/index.css
+++ b/css/index.css
@@ -207,3 +207,8 @@ footer {
     background-color: #e02121;
     color: white;
 }
+
+.container {
+    width: fit-content;
+    margin: 200px auto 400px;
+}
