--- a/css/index.css
+++ b/css/index.css
@@ -212,3 +212,24 @@ footer {
     width: fit-content;
     margin: 200px auto 400px;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup p {
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    background-color: #c74949;
+    border-radius: 5px;
+}
